--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "mapbox-gl": "^0.40.1",
+    "mapbox-gl-vue": "^1.5.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vuetify": "^0.16.4",
